2003-03-24  Rene Rebe <rene.rebe@gmx.net>

	* backend/Makefile.in backend/avision.c backend/avision.conf
	  backend/avision.h doc/descriptions/avision.desc: updated
          avision backend to latest build. This includes user-space
	  USB support and OS/2 thread handling.

2003-03-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Canon CanoScan FB620U.
	  Added more info for HP ScanJet 3500c.
	
2003-03-24  Rene Rebe <rene.rebe@gmx.net>

	* include/sane/sanei_usb.h sanei/sanei_usb.c: support for
	  interrupt endpoint reads

2003-03-23  Rene Rebe <rene.rebe@gmx.net>

	* doc/sane-usb.man fix typo

2003-03-22  Ulrich Deiters <ukd@xenon.pc.uni-koeln.de>

	* backend/canon.c: Modified the option "eject after each scan" -
	  Eject is suppressed for film scanners after preview scans.

2003-03-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Canon LIDE 50, IBM
	  ADF Color Scanner, Plustek Spectra ADF.

2003-03-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/as6e.c: Fixed segmentation fault when $PATH is not set.

2003-03-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: OS/2 specific changes: memory for SRB now is
	  allocated using _tcalloc() instead of allocating on stack to avoid
	  crossing 64k borders due to restrictions of 16-bit device-driver.
	  Cosmetic changes and some casts to reduce compiler-warnings. Patch
	  from Franz Bakan <fbakan@gmx.net>.
	* sanei/sanei_thread.c: Increased stacksize for thread. Patch from
	  Franz Bakan <fbakan@gmx.net>.

2003-03-10  Oliver Schirrmeister <oschirr@abm.de>

	* backend/fujitsu.c backund/fujitsu-scsi.h backend/fujitsu.h
          * patch from Ron Cemer <ron@roncemer.com>
	    fixes the broken "ADF empty" detection on the Fujitsu scanners 
	    when connected via USB.  It also fixes a sense-request issues,
	    which were required in order to determine whether the ADF is 